# repo-analysis-workbench

./: .env.example  .gitignore  LICENSE  README.md  package.json  pyproject.toml
configs/: benchmarks.yaml  indexer.yaml  retriever.yaml  summarizer.yaml
docs/: Design & Requirements.md  Multi-Language Code Intelligence Implementation Plan.md  Overview.md  Repo Eval.md  Target Architecture.md  To-Do.md
native/: Cargo.toml
native/src/: main.rs
scripts/: bootstrap.sh  build_embeddings.sh  build_index.sh  build_search.sh  export_summaries.sh  parse_repos.sh  precompute_eval_cache.sh  run_benchmarks.sh  sync_repos.sh
src/adapters/: __init__.py
src/agents/: __init__.py  toolkit.py
src/backends/: __init__.py  graph_backend.py  metadata_store.py  search_backend.py
src/cli/: __init__.py  main.py
src/common/: __init__.py  inventory.py  native_tool.py  retrieval.py  telemetry.py  text.py
src/embeddings/: __init__.py  indexer.py  providers.py  units.py
src/evaluation/: __init__.py  harness.py
src/graph/: __init__.py  builder.py  query.py  store.py
src/parsers/: __init__.py  ctags_backend.py  rust.py  rust_analyzer_backend.py  rustc_backend.py  scip_backend.py  tree_sitter_backend.py
src/rerank/: __init__.py  fusion.py
src/retrieval/: __init__.py  engine.py  planner.py  staged.py
src/search/: __init__.py  indexer.py  zoekt_backend.py
src/summaries/: __init__.py  builder.py
src/symbols/: __init__.py  indexer.py  persistence.py  schema.py
tests/unit/: test_ctags_backend.py  test_embedding_units.py  test_inventory.py  test_native_tool_timeouts.py  test_parser_fusion.py  test_progress_logging.py  (+10 more)
(+12 files in other folders)
