[package]
name = "repo-analysis-native"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "=4.5.31", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "=0.21.1"
tempfile = "=3.13.0"
time = "=0.3.36"
time-core = "=0.1.2"
time-macros = "=0.2.18"
tree-sitter = "=0.22.6"
tree-sitter-rust = "=0.23.3"
uuid = "=1.11.0"
zstd = "=0.12.4"
zstd-safe = "=6.0.5"
zstd-sys = "=2.0.7"
